<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context="com.uirsos.www.uirsosproject.Login.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundApp"
        tools:context="com.uirsos.www.uirsos.activity.RegisterActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="55dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/bg_login" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Logo-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo_screen" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/textLogo"
                        android:textColor="#fbff00"
                        android:textSize="15sp" />
                </RelativeLayout>
            </RelativeLayout>

            <!--Register-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/textRegister"
                    android:textColor="#ffffff" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/text_Npm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/npm"
                            android:inputType="number"
                            android:textColor="#fbff00"
                            android:textColorHint="@color/grey" />

                        <TextView
                            android:id="@+id/info_errorNPM"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/error_npm"
                            android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
                            android:textColor="@color/likeBtnAccent" />

                        <EditText
                            android:id="@+id/text_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/no_hp"
                            android:inputType="phone"
                            android:textColor="#fbff00"
                            android:textColorHint="@color/grey"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/info_kodeVerifikasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_noTerdaftar"
                            android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
                            android:textColor="@color/likeBtnAccent" />

                        <EditText
                            android:id="@+id/kode_verifikasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/kode_verifikasi"
                            android:inputType="number"
                            android:textColor="#fbff00"
                            android:textColorHint="@color/grey"
                            android:visibility="gone" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_check"
                        style="@android:style/Widget.DeviceDefault.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="#00c853"
                        android:text="@string/check"
                        android:textColor="#e8f5e9" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#ffffff"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sudahPunya"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="5sp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtViewLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#18a603"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
