<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/itemBerita"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgBerita"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/no_picture"
                    android:scaleType="fitCenter" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFakultas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fakultas"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tvJudulBerita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/judul_berita"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/hariBerita"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hari"
                            android:textSize="8sp"
                            tools:ignore="SmallSp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/koma"/>
                        <TextView
                            android:id="@+id/tanggalBerita"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tanggal"
                            android:paddingLeft="3dp"
                            android:textSize="8sp"
                            tools:ignore="SmallSp" />
                    </LinearLayout>


                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tvDeskripsiBerita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="4"
                        android:text="@string/deskripsi"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>